{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Touch",
            "id": "22d03797-5690-47a0-bdd6-a2c3bc7b478a",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "bb8fa5be-f661-4b99-ad95-27b80fe542ca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "9e538c51-6452-45ac-9043-4031e72f7773",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftButtonPress",
                    "type": "Button",
                    "id": "36f98f2d-0787-4c8e-a297-dd9ac1656ffe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightButtonPress",
                    "type": "Button",
                    "id": "5b9d7727-416e-480b-8c99-0b4e5474af7a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TestLabButton",
                    "type": "PassThrough",
                    "id": "3e85ed72-5613-41d9-9619-2a5d7470d53d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TestLabButton2",
                    "type": "PassThrough",
                    "id": "c41d0032-704b-44e2-a383-a3f592f5d7b2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShootBallButton",
                    "type": "Button",
                    "id": "8ef3ff94-8569-404d-9f9e-c567b8fd29ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FirstTouch",
                    "type": "Value",
                    "id": "4ab47169-5e39-4452-b63e-43ab3533cfea",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FirstTouchPosition",
                    "type": "Value",
                    "id": "b06726cf-169d-4652-8ede-ca36a9c95292",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondTouch",
                    "type": "Value",
                    "id": "6b68b9b6-d664-4429-8224-ff45ca8f0fb9",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondTouchPosition",
                    "type": "Value",
                    "id": "47426c84-648a-4302-b9de-626f9d2b5ec2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "NewGameButton",
                    "type": "Button",
                    "id": "d98d469a-e63b-4b84-9942-ea064ac7afee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "312e03b6-d632-43b9-b4ca-47c8de2fb4b3",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d932af11-cc60-45fa-ac2c-75af4ac02df0",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1822169f-1999-44d4-81a4-5f5ecd7702cb",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "LeftButtonPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d64acae-7b03-472c-baf7-15f9b9d6cede",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftButtonPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ed0d830-9304-4339-bf19-9021b6f57f27",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "RightButtonPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ebd67c88-59a0-4385-8f35-74d9763eb3c1",
                    "path": "<Keyboard>/slash",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightButtonPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72f4de45-f775-4b41-b95b-368f09caa51c",
                    "path": "<Keyboard>/m",
                    "interactions": "Tap,SlowTap",
                    "processors": "",
                    "groups": "",
                    "action": "TestLabButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05c3ef0d-a6b2-45b0-ae68-1bfd624bf216",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Tap,SlowTap",
                    "processors": "",
                    "groups": "",
                    "action": "TestLabButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8df0421a-cf40-461f-9317-38f71c43e831",
                    "path": "<Keyboard>/c",
                    "interactions": "Tap,SlowTap",
                    "processors": "",
                    "groups": "",
                    "action": "TestLabButton2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "300d8aa6-1dc3-4283-9311-272830c1b84e",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "Tap,SlowTap",
                    "processors": "",
                    "groups": "",
                    "action": "TestLabButton2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "86de82f8-345e-495f-a702-0f530fc0e3ef",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootBallButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ac32f168-4520-4f6f-a8a0-19a85ba39499",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootBallButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f6e58db-538d-4415-8a8b-986068a79646",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8a3dc48-8636-4c9d-80c5-e1bc9ea611b2",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3cbae150-5803-4a22-b661-6b5ebf47d0d7",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "77397165-175d-4605-8507-2d7334f975cd",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "472db20f-9db7-40e6-9085-37121e0e8010",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NewGameButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38127b56-f65e-47aa-a406-3dbe4325c149",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NewGameButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}